--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
                     
                     <div>
                         <h2 class="about__subtitle">I am Joon Yuan</h2>
-                        <p class="about__text">Hi, I'm Joon Yuan Chong, a Computer Science undergraduate specializing in Artificial Intelligence at Oregon State University. 
+                        <p class="about__text">Hi, I'm Joon Yuan Chong, a Computer Science graduate specializing in Artificial Intelligence from Oregon State University. 
                             I have hands-on experience in AI-driven projects, including my capstone on AI recycling, where I integrated MLflow, built APIs, and fine-tuned models. 
-                            My focus is on solving complex problems through technology, and I’m passionate about applying AI to real-world challenges. 
-                            Outside of tech, I stay active through the gym, guitar, and strategic games like chess. 
-                            I’m eager to learn, grow, and collaborate on innovative projects.
-
+                            My focus is on solving complex problems through technology, and I’m passionate about applying AI to real-world challenges.
+                            Beyond tech, I stay active through the gym, guitar, and strategic games like chess. I’m eager to continue learning, growing, and collaborating on innovative projects.
                         </p>           
                     </div>                                   
                 </div>
@@ -89,10 +87,12 @@
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
                         <p class="skills__text">I have a strong technical skill set, with fluency in Python and Java, and a solid grasp of C and JavaScript, enabling me to adapt across programming environments. 
-                            My experience with MongoDB and AWS has enhanced my ability to manage and deploy cloud-based applications. 
-                            I've applied AI principles to develop and fine-tune machine learning models, integrating tools like MLflow for experiment tracking and model management. 
-                            Additionally, I create APIs to streamline data processes for consistency and scalability. I thrive in collaborative team settings, bringing attention to detail and a problem-solving mindset to deliver high-quality results.
-
+                            My experience with MongoDB and AWS has strengthened my ability to manage and deploy cloud-based applications. 
+                            I have applied AI principles to develop and fine-tune machine learning models, integrating tools like MLflow for experiment tracking and model management. 
+                            Additionally, I design and implement APIs to streamline data processes for consistency and scalability.
+                        <br>
+                            As a Computer Science graduate specializing in Artificial Intelligence from Oregon State University, I thrive in collaborative team settings, bringing attention to detail and a problem-solving mindset to deliver high-quality results. 
+                            I am eager to apply my skills to innovative projects that leverage AI to solve real-world challenges.
                         </p>
                         <div class="skills__data">
                             <div class="skills__names">
