added more projects

--- a/index.html
+++ b/index.html
@@ -172,9 +172,18 @@
                     <a href="https://github.com/Fuminou/File-hosting-project" class="work__img">
                         <img src="assets/img/fileHosting.png" alt="">
                         <span class="work__name">Python File Hosting Project</span>
-                    <a href="https://github.com/Fuminou/Simple-restaurant-menu-websitr" class="work__img">
-                        <img src="assets/img/menu.png" alt="">
-                        <span class="work__name">Simple Restaraunt Menu Website</span>
+                    <a href="https://github.com/Fuminou/chat-app" class="work__img">
+                        <img src="assets/img/chat.png" alt="">
+                        <span class="work__name">Real Time Chat Application</span>
+                    <a href="https://github.com/Fuminou/chess-ai-bot" class="work__img">
+                        <img src="assets/img/chess.png" alt="">
+                        <span class="work__name">Play against my chess bot website</span>
+                    <a href="https://github.com/Fuminou/Redis" class="work__img">
+                        <img src="assets/img/redis.png" alt="">
+                        <span class="work__name">Build your own Redis!</span>
+                    <a href="https://github.com/Fuminou/cs361-individual-project" class="work__img">
+                        <img src="assets/img/hobby.png" alt="">
+                        <span class="work__name">Hobby Recommendation Microservice</span>      
                 </div>
             </section>
 
